--- a/views/blobs/show.jade
+++ b/views/blobs/show.jade
@@ -1,7 +1,7 @@
 extends ../layout
 
 block content
-    h1 Edit Submission
+    h1 Questions saved Sucessfully
     br 
     h3 
          p Name: #{blob.name}
@@ -36,5 +36,5 @@ block content
 
          p I Want: #{blob.iWant}
 
-         a.btn.btn-success(href='/blobs/#{blob._id}/edit') Save Changes
+         a.btn.btn-success(href='/blobs/#{blob._id}/edit') Edit Changes 
 
