--- a/views/blobs/show.jade
+++ b/views/blobs/show.jade
@@ -1,7 +1,7 @@
 extends ../layout
 
 block content
-    h1 Questions saved Sucessfully
+    h1 Questions Saved Sucessfully
     br 
     h3 
          p Name: #{blob.name}
