--- a/views/blobs/new.Two.jade
+++ b/views/blobs/new.Two.jade
@@ -29,19 +29,15 @@ block content
  
             input.form-control#inputName(type="text", placeholder="ex. Charles Dickens or Oliver Twist", name="favBookAuthor")
             br
-         div.row Video Game Console (If any):
+         div.row Favorite Scents (If any):
  
-            input.form-control#inputName(type="text", placeholder="ex. PS4 / PS3 / Xbox ...", name="videoGameConsole")
-            br
-         div.row Favorite Sports Teams (If any): 
- 
-            input.form-control#inputName(type="text", placeholder="ex. Tampa Bay Buccaneers", name="favSportTeam")
+            input.form-control#inputName(type="text", placeholder="ex. New Car Smell", name="favScent")
             br
          div.row I Collect:
  
             input.form-control#inputName(type="text", placeholder="ex. Clocks", name="iCollect")
             br
-         div.row List Hobbies:
+         div.row List Hobbies / Activities:
  
             input.form-control#inputName(type="text", placeholder="ex. Running", name="listHobbies")
             br
