--- a/views/index.jade
+++ b/views/index.jade
@@ -1,8 +1,11 @@
 extends layout
 
 block content
-  h1 Christmas List Submissions
+  h1 Christmas Qustionnaire Submissions
     br
     br
-    a.btn.btn-primary(href='/blobs/new') Add A Christmas List Submission
+    a.btn.btn-primary(href='/blobs/new') Add A Christmas Qustionnaire Submission (Guys)
+    br
+    br
+    a.btn.btn-danger(href='/blobs/newTwo') Add A Christmas Qustionnaire Submission (Gals)
     
