--- a/views/index.jade
+++ b/views/index.jade
@@ -4,8 +4,10 @@ block content
   h1 Christmas Qustionnaire Submissions
     br
     br
-    a.btn.btn-primary(href='/blobs/new') Add A Christmas Qustionnaire Submission (Guys)
-    br
-    br
-    a.btn.btn-danger(href='/blobs/newTwo') Add A Christmas Qustionnaire Submission (Gals)
+    div.row
+      div.col-md-4
+        a.btn.btn-danger(href='/blobs/newTwo') Add A Christmas Qustionnaire Submission (Gals)
+      div.col-md-4
+        a.btn.btn-primary(href='/blobs/new') Add A Christmas Qustionnaire Submission (Guys)
+        
     
