--- a/views/blobs/newTwo.jade
+++ b/views/blobs/newTwo.jade
@@ -61,6 +61,7 @@ block content
 
             input.form-control#inputName(type="text", placeholder="ex. A Specific Item that you may want", name="iWant")
             br
+            input(type='hidden',value='gal',name='gender')
          div.row 
             button.btn.btn-success#btnSubmit(type="submit") submit
             
