--- a/views/blobs/new.jade
+++ b/views/blobs/new.jade
@@ -65,6 +65,7 @@ block content
 
             input.form-control#inputName(type="text", placeholder="ex. A Specific Item that you may want", name="iWant")
             br
+            input(type='hidden',value='guy',name='gender')
          div.row 
             button.btn.btn-success#btnSubmit(type="submit") submit
             
