--- a/views/blobs/edit.jade
+++ b/views/blobs/edit.jade
@@ -26,11 +26,11 @@ block content
             div.row Favorite Scent (If any): 
                 input.form-control#inputName(type="text", value='#{blob.favScent}', name="favScent")
                 br
-        if  (blob.gender == "guy")   
+         if  (blob.gender == "guy")   
             div.row Video Game Console (If any): 
                 input.form-control#inputName(type="text", value='#{blob.videoGameConsole}', name="videoGameConsole")
                 br
-            div.row favSportTeam (If any): 
+            div.row Favorite Sports Teams (If any): 
                 input.form-control#inputName(type="text", value='#{blob.favSportTeam}', name="favSportTeam")
                 br
          div.row I Collect: 
