--- a/views/blobs/show.jade
+++ b/views/blobs/show.jade
@@ -40,3 +40,5 @@ block content
 
          a.btn.btn-success(href='/blobs/#{blob._id}/edit') Edit Changes 
 
+         a.btn.btn-danger(href='/blobs/#{blob._id}/delete') Delete Submission 
+
